[package]
name = "mcai"
version = "0.0.1"
authors = [
  "Marc-Antoine Arnaud <maarnaud@media-io.com>"
]
description = "CLI tool for the Media Cloud AI Platform"
keywords = ["Medid", "Cloud", "AI", "micro-service"]
license = "MIT"
repository = "https://github.com/media-cloud-ai/mcai"
homepage = "https://github.com/media-cloud-ai/mcai"
documentation = "https://docs.rs/mcai"
readme = "README.md"
edition = "2018"
